--- a/html websites/Ingredients.html
+++ b/html websites/Ingredients.html
@@ -136,8 +136,8 @@
                     <div class="footer-section" id="sm">
                         <p>Follow Us on: </p>
                         <br>
-                        <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="image/instagram.png" alt="Instagram Icon"></a>
-                        <a href="https://www.tiktok.com/@your_tiktok_username"><img src="image/tiktok.png" alt="TikTok Icon"></a>
+                        <a href="https://www.instagram.com/_thani_0911_/?utm_source=ig_web_button_share_sheet"><img src="../image/instagram.png" alt="Instagram Icon"></a>
+                        <a href="https://www.tiktok.com/@your_tiktok_username"><img src="../image/tiktok.png" alt="TikTok Icon"></a>
                     </div>
                 </div>
             </div>
